--- a/src/Contacts/View/MainWindow.xaml
+++ b/src/Contacts/View/MainWindow.xaml
@@ -3,42 +3,124 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:View"
+        xmlns:services="clr-namespace:View.Converters"
         mc:Ignorable="d"
-        Icon="Resources/contacts_96x96.ico"
+        Icon="/Resources/contacts_96x96.ico"
         Title="Contacts" Height="450" Width="650" MinHeight="450px" MinWidth="650px">
-    <Grid Margin="15px">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+    <Window.Resources>
+        <ResourceDictionary>
+                <services:VisibilityConverter x:Key="VisibilityConverter"/>
+            </ResourceDictionary>
+    </Window.Resources>
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="1.8*"/>
         </Grid.ColumnDefinitions>
-        <GroupBox Grid.Row="0" Grid.Column="0" Header="Edit Contact">
-            <StackPanel>
-                <TextBlock Text="Name:" Margin="3px"/>
-                <TextBox Margin="3px" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Phone Number:" Margin="3px"/>
-                <TextBox Margin="3px" Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Email:" Margin="3px"/>
-                <TextBox Margin="3px" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
+        <Grid Background="#f8f8f8" Grid.Column="0">
+            <DockPanel 
+                Grid.Column="0" 
+                Margin="8" 
+                LastChildFill="True">
+                <DockPanel DockPanel.Dock="Top" LastChildFill="True">
+                    <TextBlock 
+                        Margin="3" 
+                        VerticalAlignment="Center" 
+                        DockPanel.Dock="Left" 
+                        Text="Find:"/>
+                    <TextBox Width="Auto" Margin="3"></TextBox>
+                </DockPanel>
+                <DockPanel LastChildFill="True">
+                    <Grid DockPanel.Dock="Bottom">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button 
+                            Grid.Column="0" 
+                            Height="25" 
+                            Margin="3" 
+                            Command="{Binding AddCommand}"
+                            Content="Add" 
+                            IsEnabled="{Binding IsReadOnly}"/>
+                        <Button 
+                            Grid.Column="1" 
+                            Height="25" 
+                            Margin="3" 
+                            Command= "{Binding EditCommand}"    
+                            Content="Edit" 
+                            IsEnabled="{Binding IsEnabled}"/>
+                        <Button 
+                            Grid.Column="2" 
+                            Height="25" 
+                            Margin="3" 
+                            Command="{Binding RemoveCommand}"
+                            Content="Remove" 
+                            IsEnabled="{Binding IsEnabled}"/> 
+                    </Grid>
+                    <ListBox
+                        Margin="3"
+                        DisplayMemberPath="Name"
+                        DockPanel.Dock="Top"
+                        ItemsSource="{Binding Path=Contacts}"
+                        SelectedItem="{Binding Path=SelectedContact, UpdateSourceTrigger=PropertyChanged}"/>
+                </DockPanel>
+            </DockPanel>
+        </Grid>
+        <GridSplitter   
+                Grid.Column="1" 
+                Width="3" 
+                HorizontalAlignment="Center" 
+                ShowsPreview="False"/>  
+        <Grid 
+            Grid.Column="2" 
+            Margin="8" 
+            Background="#ffff">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Image 
+                Grid.Row="1" 
+                Grid.Column="0"
+                Width="100" Height="100"
+                Margin="3"
+                VerticalAlignment="Top"
+                Source="Resources\contacts_96x96.ico"/>
+            <TextBlock 
+                Grid.Column="1" 
+                Margin="3" 
+                Text="Name:"/>
+            <StackPanel Grid.Row="1" Grid.Column="1">
+                <TextBox
+                    Margin="3"
+                    IsReadOnly="{Binding IsReadOnly}"
+                    Text="{Binding Path=SelectedContact.Name, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Margin="3" Text="Phone Number:"/>
+                <TextBox
+                    Margin="3"
+                    IsReadOnly="{Binding IsReadOnly}"
+                    Text="{Binding Path=SelectedContact.PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Margin="3" Text="Email:"/>
+                <TextBox
+                    Margin="3"
+                    IsReadOnly="{Binding IsReadOnly}"
+                    Text="{Binding Path=SelectedContact.Email, UpdateSourceTrigger=PropertyChanged}"/>
+                <Button
+                    Width="75"
+                    Height="25"
+                    Margin="3 50 3 3"
+                    HorizontalAlignment="Left"
+                    Content="Apply"
+                    Visibility="{Binding IsReadOnly, Converter={StaticResource VisibilityConverter}}"
+                    Command="{Binding ApplyCommand}"/>
             </StackPanel>
-        </GroupBox>
-        <GroupBox Grid.Row="0" Grid.Column="1" Header="Read Contact">
-            <StackPanel>
-                <TextBlock Text="Name:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Phone Number:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Email:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
-            </StackPanel>
-        </GroupBox>
-        <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Save" Margin="3px" Width="75px" Height="25px" Command="{Binding SaveCommand}"/>
-            <Button Content="Load" Margin="3px" Width="75px" Height="25px" Command="{Binding LoadCommand}"/>
-        </StackPanel>
+        </Grid>
     </Grid>
 </Window>
